Supported multiple recipients in MENOS alerting

--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -54,11 +54,11 @@
       <h5 id="deviceUART-heading13" style="color:#3C5A99;font-weight:400;">Recipients</h5>
       <ion-checkbox id="deviceUART-checkbox1" ng-model="data.uart.notification.endpoints.email.enable">Send email to </ion-checkbox>
       <label class="item item-input" id="deviceUART-input66">
-        <input type="text" placeholder="Email address(es)" ng-model="data.uart.notification.endpoints.email.recipients" readonly="">
+        <input type="text" placeholder="Email address(es)" ng-model="data.uart.notification.endpoints.email.recipients">
       </label>
       <ion-checkbox id="deviceUART-checkbox2" ng-model="data.uart.notification.endpoints.mobile.enable">Send SMS to </ion-checkbox>
       <label class="item item-input" id="deviceUART-input68">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.uart.notification.endpoints.mobile.recipients" readonly="">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.uart.notification.endpoints.mobile.recipients">
       </label>
       <ion-checkbox id="deviceUART-checkbox3" ng-model="data.uart.notification.endpoints.notification.enable">Send notification to </ion-checkbox>
       <label class="item item-input" id="deviceUART-input67">
