--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -94,11 +94,11 @@
       </div>
       <ion-checkbox id="temperature-checkbox21" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="temperature-input129">
-        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients" readonly="">
+        <input type="text" placeholder="Email address(es)" ng-model="data.attributes.notification.endpoints.email.recipients">
       </label>
       <ion-checkbox id="temperature-checkbox22" ng-model="data.attributes.notification.endpoints.mobile.enable">Send SMS to</ion-checkbox>
       <label class="item item-input" id="temperature-input130">
-        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients" readonly="">
+        <input type="text" placeholder="Phone number(s)" ng-model="data.attributes.notification.endpoints.mobile.recipients">
       </label>
       <ion-checkbox id="temperature-checkbox23" ng-model="data.attributes.notification.endpoints.notification.enable">Send notification to</ion-checkbox>
       <label class="item item-input" id="temperature-input131">
