--- a/webapp/src/ionicapp/www/templates/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards1.html
@@ -1,23 +1,22 @@
-<ion-view title="Dashboards" hide-back-button="true" nav-transition="none" id="page11" class="page_width">
+<ion-view title="Dashboards" hide-back-button="true"  class="page_width">
+  <ion-nav-buttons side="right" class="has-header">
+   <input type="text" placeholder="Search" ng-model="data.search" style="border: 2px solid grey; border-radius: 5px; padding: 5px"
+               ng-keyup="submitSearch($event)" ng-keydown="submitSearch($event)">
+    <button class="button button-icon ion-android-add-circle" ng-click="add()"></button>
+  </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-
     <form class="list">
-        <div  class="item item-body">
-          <div class="dashboard-item-main-column">
-            <label class="item item-input" id="gateways-input90">
-              <input type="text" placeholder="Search" ng-model="data.devices_filter" ng-keypress="submitSearch($event)">
-            </label>
-         </div>
-          <div class="dashboard-item-action-column">
-            <button id="gateways-button24" ng-click="add()"
-                    style="font-weight:600;"
-                    class="button button-positive button-large button-block button-clear icon-right ion-android-add-circle">
-            </button>
-          </div>
-        </div>
+
     </form>
-    <div  class="list card" ng-repeat="dashboard in dashboards">
-      <div class="item item-body">
+    <div  class="list card" >
+      <div class="item item-body" ng-repeat="dashboard in dashboards">
+        <div class="dashboard-item-icon-column">
+          <button style="font-weight:600;"
+                  ng-style="{'color': dashboard.color}"
+                  class="button button-positive button-large button-block button-clear icon ion-ios-analytics">
+          </button>
+
+        </div>
         <div class="dashboard-item-main-column" ng-click="viewDetail(dashboard)">
           <b>{{dashboard.name}}</b>
           <p>Created: {{dashboard.createdAt}}</p>
@@ -26,6 +25,7 @@
         <div class="dashboard-item-action-column">
           <button ng-click="delete(dashboard.id)"
                   style="font-weight:600;"
+                   ng-style="{'color': dashboard.color}"
                   class="button button-positive button-large button-block button-clear icon-right ion-android-close">
           </button>
         </div>
