Improved LDS SCAN feature

--- a/webapp/src/ionicapp/www/templates/gateway.html
+++ b/webapp/src/ionicapp/www/templates/gateway.html
@@ -83,6 +83,7 @@
         </div>
       </div>
     </div>
+    <button id="gateway-button231" ng-click="scanLDSBUS()" class="button button-positive button-block">Scan</button>
     <div class="list card d3container" id="gateway-card219" ng-show="1">
       <div class="hierarchychart" width="1000" height="450">
         <svg id="{{data.devicename_ex}}" width="1000" height="450">
