--- a/webapp/src/ionicapp/www/templates/gateways.html
+++ b/webapp/src/ionicapp/www/templates/gateways.html
@@ -48,6 +48,9 @@
             <strong> {{ group.groupname }} </strong>
           </p>
         </div>
+        <div id="gateways-markdown372" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#444444;font-size:12px;">Gateway Group</p>
+        </div>
       </div>
       <div id="gateways-container25" ng-click="updateDeviceGroup(group)">
         <div id="gateways-markdown476" class="show-list-numbers-and-dots card_label_devicegroups">
