Cleaned up code and database

--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -123,7 +123,8 @@
       </div>
     </form>
     <form id="humidity-form177" class="list">
-      <button id="humidity-button140" ng-click="submit()" class="button button-positive button-block">{{ data.sensor.subclass ? "DONE" : "SAVE" }}</button>
+      <button id="humidity-button140" ng-click="submit()" class="button button-positive button-block">SAVE</button>
+      <button id="humidity-button233" ng-click="submitDelete()" class="button button-assertive button-block">DELETE</button>
       <div class="spacer" style="height: 100px;"></div>
     </form>
   </ion-content>
