--- a/webapp/src/ionicapp/www/templates/temperature.html
+++ b/webapp/src/ionicapp/www/templates/temperature.html
@@ -123,7 +123,8 @@
       </div>
     </form>
     <form id="temperature-form92" class="list">
-      <button id="temperature-button90" ng-click="submit()" class="button button-positive button-block">{{ data.sensor.subclass ? "DONE" : "SAVE" }}</button>
+      <button id="temperature-button90" ng-click="submit()" class="button button-positive button-block">SAVE</button>
+      <button id="temperature-button232" ng-click="submitDelete()" class="button button-assertive button-block">DELETE</button>
       <div class="spacer" style="height: 100px;"></div>
     </form>
   </ion-content>
