--- a/webapp/src/ionicapp/www/templates/gatewayLocation.html
+++ b/webapp/src/ionicapp/www/templates/gatewayLocation.html
@@ -36,7 +36,7 @@
     <div id="gatewayLocation-markdown360" ng-show="data.devicename != &quot;All devices&quot;" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ data.location != "UNKNOWN" &amp;&amp; data.location != "" ? "(Latitude: " + data.location.latitude + " ," + "Longitude: " + data.location.longitude + ")" : "" }}</p>
     </div>
-    <form id="gatewayLocation-form228" class="list" ng-show="data.devicename != &quot;All devices&quot;">
+    <form id="gatewayLocation-form228" class="list">
       <button id="gatewayLocation-button152" ng-click="setDeviceLocation(data.devicename)" class="button button-positive button-block">Set</button>
       <button id="gatewayLocation-button155" ng-click="deleteDeviceLocation(data.devicename)" class="button button-positive button-block button-outline">Delete</button>
     </form>
