Refactor dashboard & chart api

--- a/webapp/src/ionicapp/www/css/dashboards.css
+++ b/webapp/src/ionicapp/www/css/dashboards.css
@@ -100,3 +100,15 @@
 .text-fuchsia {
   background-color: #F012BE !important;
 }
+
+.dashboard-border {
+  border: 1px solid #ccc!important;
+}
+
+.dashboard-container {
+  padding: 10px;
+}
+
+.dashboard-round-border {
+  border-radius: 5px;
+}
