--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -26,9 +26,15 @@
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-cash"></i>Credits</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.billing_address({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-cash"></i>Billing Address</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.subscription({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-cash"></i>Subscription & Billing</ion-item>
+          <i class="icon ion-cash"></i>Subscription</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.transaction({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-cash"></i>Billing History</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.gateways({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
 
