--- a/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
+++ b/webapp/src/ionicapp/www/templates/dashboards/dashboards1.html
@@ -128,7 +128,7 @@
                         ng-click="changeActiveTab(2)"
                         ng-class="{'active': activeTab==2}"
                         style="font-weight:300;color:#AAAAAA;font-size:12px;border-radius:256px 256px 256px 256px;"
-                        class="button button-stable button-small button-block">Sensors</button>
+                        class="button button-stable button-small button-block">Actuators</button>
                   </div>
                 </form>
 
