Fixed continuous mode for sensor forwarding

--- a/webapp/src/ionicapp/www/templates/motionDetection.html
+++ b/webapp/src/ionicapp/www/templates/motionDetection.html
@@ -75,6 +75,7 @@
       <div id="motionDetection-markdown558" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;">Hardware</p>
       </div>
+      <ion-checkbox id="motionDetection-checkbox91" ng-model="data.attributes.hardware.enable">Forward to device</ion-checkbox>
       <label class="item item-select" id="motionDetection-select125">
         <span class="input-label">IoT Modem</span>
         <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
