--- a/webapp/src/ionicapp/www/templates/cO2Gas.html
+++ b/webapp/src/ionicapp/www/templates/cO2Gas.html
@@ -75,6 +75,7 @@
       <div id="cO2Gas-markdown570" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;">Hardware</p>
       </div>
+      <ion-checkbox id="cO2Gas-checkbox92" ng-model="data.attributes.hardware.enable">Forward to device</ion-checkbox>
       <label class="item item-select" id="cO2Gas-select130">
         <span class="input-label">IoT Modem</span>
         <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
