--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -75,6 +75,7 @@
       <div id="humidity-markdown319" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;">Hardware</p>
       </div>
+      <ion-checkbox id="humidity-checkbox89" ng-model="data.attributes.hardware.enable">Forward to device</ion-checkbox>
       <label class="item item-select" id="humidity-select15">
         <span class="input-label">IoT Modem</span>
         <select ng-model="data.hardware_devicename" ng-options="device.id as device.devicename for device in devices"></select>
