1 cognito_client add admin_get_user function 2 database add admin_get_user function 3 add pretty_print _util 4 timestamp_util add datetime_from_string and timestamp_from_date_string functions 5 middleware add user created and modified time inforamtions 6 api changes ( 5 apis . /promocode/   /promocode_verify/   / promocode/{code}/   /prorate/   and /checkout/
known issues :
   checkout api not perfect, need to fix transactional affairs ( say multi item checkout and one failed but others success, the rollback action needed)

--- a/webapp/src/ionicapp/www/templates/payment/subscription_change.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription_change.html
@@ -26,7 +26,7 @@
           </label>
           <label class="item item-input item-divider">
             <span class="input-label">Storage</span>
-            <span class="input-label">{{data.subscription.current.plan.storage}}</span>
+            <span class="input-label">{{data.subscription.current.plan.storage}} GB</span>
           </label>
 
         </div>
