Revert "1 cognito_client add admin_get_user function"
This reverts commit 259abd699c04df95a42f52edd342a5a20a8b1d65.

--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -23,11 +23,18 @@
         <ion-item class="item-divider" id="menu-list-item-divider25"> </ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item11" ui-sref="menu.organizations({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-color-filter-outline"></i>Organizations</ion-item>
-        
-        
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-cash"></i>Credits</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.billing_address({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-cash"></i>Billing Address</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.subscription({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
-          <i class="icon ion-document-text"></i>Subscription</ion-item>
+          <i class="icon ion-cash"></i>Subscription</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.transaction({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-cash"></i>Billing History</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.gateways({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
 
