--- a/webapp/src/ionicapp/www/templates/payment/subscription_detail.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription_detail.html
@@ -28,7 +28,7 @@
       <span class="input-label">Storage</span>
     </label>
       <label class="item item-input item-divider">
-        <span class="input-label">{{data.subscription.current.storage}} / {{data.subscription.current.plan.storage}} GB</span>
+        <span class="input-label">{{data.subscription.current.storage}} / {{data.subscription.current.plan.storage}}</span>
         <span class="input-label"></span>
       </label>
     <button id="topUpCredits-button13" ng-click="upgrade()" class="button button-positive button-block">UPGRADE SUBSCRIPTION</button>
