--- a/webapp/src/ionicapp/www/templates/ambientLight.html
+++ b/webapp/src/ionicapp/www/templates/ambientLight.html
@@ -115,9 +115,13 @@
         <input type="text" placeholder="****************" ng-model="data.attributes.notification.endpoints.notification.recipients" readonly="">
       </label>
       <ion-checkbox id="ambientLight-checkbox65" ng-model="data.attributes.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
+      <ion-checkbox id="ambientLight-checkbox97" ng-model="data.attributes.notification.endpoints.modem.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
+      <label class="item item-input" id="ambientLight-input248">
+        <input type="text" placeholder="" ng-model="data.attributes.notification.endpoints.modem.recipients">
+      </label>
       <label class="item item-select" id="ambientLight-select121">
         <span class="input-label"></span>
-        <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename"></select>
+        <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename" ng-show="0"></select>
       </label>
       <ion-checkbox id="ambientLight-checkbox66" ng-model="data.attributes.notification.endpoints.storage.enable">Send to storage</ion-checkbox>
       <div id="ambientLight-container98" ng-show="data.attributes.notification.endpoints.storage.recipients != &quot;&quot;" class="tab_margin_1">
