--- a/webapp/src/ionicapp/www/templates/deviceUART.html
+++ b/webapp/src/ionicapp/www/templates/deviceUART.html
@@ -65,9 +65,13 @@
         <input type="text" placeholder="****************" ng-model="data.uart.notification.endpoints.notification.recipients" readonly="">
       </label>
       <ion-checkbox id="deviceUART-checkbox4" ng-model="data.uart.notification.endpoints.modem.enable">Send to IoT Modem </ion-checkbox>
+      <ion-checkbox id="deviceUART-checkbox94" ng-model="data.uart.notification.endpoints.modem.isgroup">... check if recipients is device groups instead of devices</ion-checkbox>
+      <label class="item item-input" id="deviceUART-input245">
+        <input type="text" placeholder="" ng-model="data.uart.notification.endpoints.modem.recipients">
+      </label>
       <label class="item item-select" id="deviceUART-select26">
         <span class="input-label"></span>
-        <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename"></select>
+        <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename" ng-show="0"></select>
       </label>
       <ion-checkbox id="deviceUART-checkbox48" ng-model="data.uart.notification.endpoints.storage.enable">Send to Storage</ion-checkbox>
       <div id="deviceUART-container12" ng-show="data.uart.notification.endpoints.storage.recipients != &quot;&quot;" class="tab_margin_1">
