--- a/webapp/src/ionicapp/www/templates/payment/subscription.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription.html
@@ -21,7 +21,7 @@
         </div>
         <div class="item item-body" >
           <div class="show-list-numbers-and-dots">
-            <strong><p style="margin-top:0px;color:#444444;font-size:16px;">Plan: {{ subscription.current.plan.name }}<span ng-if ="subscription.status == 'cancel'" style="color:red">(CANCELLED)</span></p><strong>
+            <strong><p style="margin-top:0px;color:#444444;font-size:16px;">Plan: {{ subscription.current.plan.name }}<span ng-if ="subscription.status == 'cancel'" style="color:red">(CANCELLED)</span><span ng-if ="subscription.status == 'downgrade'" style="color:red">(CHANGING TO PLAN:{{subscription.next.plan.name}})</span></p><strong>
           </div>
           <div class="show-list-numbers-and-dots">
             <p style="margin-top:0px;color:#444444;font-size:12px;">UUID: {{ subscription.deviceid }}</p>
