--- a/webapp/src/ionicapp/www/templates/alerts.html
+++ b/webapp/src/ionicapp/www/templates/alerts.html
@@ -29,6 +29,50 @@
       <button id="alerts-button151" ng-click="applyFilter(deviceidx, type)" class="button button-positive button-block">Apply</button>
     </form>
     <div id="alerts-markdown289" class="show-list-numbers-and-dots">
+      <p style="color:#3C5A99;">MENOS usage summary for the month</p>
+    </div>
+    <div id="alerts-container102" class="tab_margin_1">
+      <table style="width:100%" bordercolor="#444444">
+        <tbody>
+          <tr>
+            <th style="width:25%">
+              <b>Device Name</b>
+            </th>
+            <th style="width:15%">
+              <b>SMS</b>
+            </th>
+            <th style="width:15%">
+              <b>Email</b>
+            </th>
+            <th style="width:15%">
+              <b>Notification</b>
+            </th>
+            <th style="width:15%">
+              <b>Device</b>
+            </th>
+            <th style="width:15%">
+              <b>Storage</b>
+            </th>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div id="alerts-container103" ng-repeat="usage in usages" class="tab_margin_1">
+      <table style="width:100%">
+        <tbody>
+          <tr>
+            <td style="width:25%">{{ usage.devicename }}</td>
+            <td style="width:15%">{{ usage.Mobile }}</td>
+            <td style="width:15%">{{ usage.Email }}</td>
+            <td style="width:15%">{{ usage.Notification }}</td>
+            <td style="width:15%">{{ usage.Modem }}</td>
+            <td style="width:15%">{{ usage.Storage }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="spacer" style="height: 30px;"></div>
+    <div id="alerts-markdown589" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">Result: {{ items.length }} transactions</p>
     </div>
     <ion-list id="alerts-list10">
