--- a/webapp/src/ionicapp/www/templates/payment/subscription_change.html
+++ b/webapp/src/ionicapp/www/templates/payment/subscription_change.html
@@ -64,7 +64,7 @@
             </label>
             <label class="item item-input item-divider">
               <span class="input-label">Storage</span>
-              <span class="input-label">{{plan.storage}}</span>
+              <span class="input-label">{{plan.storage}} GB</span>
             </label>
 
           </div>
