Added Su's web app changes

--- a/webapp/src/ionicapp/www/templates/payment/promocode.html
+++ b/webapp/src/ionicapp/www/templates/payment/promocode.html
@@ -19,12 +19,12 @@
         </div>
         <div class="item item-body" >
           <div class="show-list-numbers-and-dots">
-            <strong><p style="margin-top:0px;color:#444444;font-size:16px;">{{ promocode._id }}</p><strong>
+            <strong><p style="margin-top:0px;color:#444444;font-size:16px;">{{ promocode._id }}</p></strong>
           </div>
           <div class="show-list-numbers-and-dots">
             <p style="margin-top:0px;color:#444444;font-size:12px;">{{ promocode.remark }}</p>
           </div>
-          
+
         </div>
       </div>
     </div>
